--- a/minimal-express/views/index.ejs
+++ b/minimal-express/views/index.ejs
@@ -17,6 +17,11 @@
       </header>
 
       <form action="/login" method="POST">
+        <% if (typeof error !== 'undefined' && error) { %>
+          <div class="form-group error">
+            <p class="error-text"><%= error %></p>
+          </div>
+        <% } %>
         <div class="form-group">
           <label for="username">Username</label>
           <input type="text" id="username" name="username" placeholder="Enter your username" required>
