--- a/minimal-express/views/registro.ejs
+++ b/minimal-express/views/registro.ejs
@@ -55,7 +55,7 @@
 
         <div class="actions">
           <button class="btn btn-primary" type="submit">Create account</button>
-          <button class="btn btn-secondary" type="button" onclick="window.location.href='/'">
+          <button class="btn btn-secondary" type="button" onclick="window.location.href='/registrp_exito.ejs'">
             I already have an account
           </button>
         </div>
